--- a/functions/Cargo.toml
+++ b/functions/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "functions"
 version = "0.1.0"
-authors = ["Michael Murphy <mmurphy@glasslewis.com>"]
+authors = ["Michael Murphy < 5879863+mrblonde91@users.noreply.github.com>"]
 edition = "2018"
 
 [dependencies]
