--- a/minigrep/Cargo.toml
+++ b/minigrep/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "lifetimes"
+name = "minigrep"
 version = "0.1.0"
-authors = ["Michael Murphy < 5879863+mrblonde91@users.noreply.github.com>"]
+authors = ["Michael Murphy <5879863+mrblonde91@users.noreply.github.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
