--- a/references/Cargo.toml
+++ b/references/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "references"
 version = "0.1.0"
-authors = ["mmurphyglewis <mmurphy@glasslewis.com>"]
+authors = ["mmurphyglewis < 5879863+mrblonde91@users.noreply.github.com>"]
 edition = "2018"
 
 [dependencies]
