--- a/Guessing_Game/Cargo.toml
+++ b/Guessing_Game/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "guessing_game"
+name = "guessing_game_test12424"
 version = "0.1.0"
 authors = ["Michael Murphy < 5879863+mrblonde91@users.noreply.github.com>"]
 edition = "2018"
